fixing thumb spacing

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -365,6 +365,10 @@ blockquote {
     margin-top: 60px;
 }
 
+home-block .portfolio-thumbs img {
+    margin: 0 5px 5px 0 !important;
+}
+
 .about-copy {
     padding: 0 15px;
     margin: 40px auto;
